--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ description = "Command line interface for Flathub"
 
 [dependencies]
 clap = { version = "4.4.5", features = [ "derive" ] }
+git2 = "0.18.1"
+thiserror = "1.0.49"
