--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ description = "Command line interface for Flathub"
 [dependencies]
 clap = { version = "4.4.5", features = [ "derive" ] }
 git2 = "0.18.1"
+serde = { version = "1.0", features = [ "derive" ] }
 thiserror = "1.0.49"
+toml = "0.8.2"
