--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ description = "Command line interface for Flathub"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.98"
 clap = { version = "4.4.5", features = [ "derive" ] }
 dialoguer = "0.11.0"
 git2 = "0.18.1"
