--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,12 @@ anyhow = "1.0.98"
 clap = { version = "4.4.5", features = [ "derive" ] }
 dialoguer = "0.11.0"
 git2 = "0.18.1"
+humanize-bytes = "1.0.6"
 lazy_static = "1.4.0"
+multimap = "0.9.1"
 serde = { version = "1.0", features = [ "derive" ] }
 serde_json = { version = "1.0.107", features = [ "preserve_order" ] }
 thiserror = "1.0.49"
 toml = "0.8.2"
+url = "2.5.4"
 xmlwriter = "0.1.0"
